--- a/Relazione/Relazione_MSA.tex
+++ b/Relazione/Relazione_MSA.tex
@@ -31,6 +31,7 @@
 \usepackage{amsthm} 
 \usepackage{enumitem}
 \setlength\parindent{0pt} % Removes all indentation from paragraphs
+\usepackage{subcaption}
 
 %\renewcommand{\labelenumi}{\alph{enumi}.} % Make numbering in the enumerate environment by letter rather than number (e.g. section 6)
 
@@ -384,19 +385,68 @@ Il modello matematico viene realizzato seguendo tre fasi:
 Per effettuare le misurazioni della grandezza in esame, \'e stato utilizzato il \textit{tool Battery-Historian} che permette l'analisi e la visualizzazione del consumo energetico generato da tutte le applicazioni eseguite durante il test, definendo i consumi dettati dall'utilizzo del display e della rete da parte da tali applicazioni.
 
 \subsubsection{Fase 1 - \textit{Livello di batteria} nel tempo fissata la \textit{frequenza di pull}}
+Dall'osservazione dei dati raccolti (e visualizzati nelle figure ) si riscontra il seguente risultato:
 
-\begin{figure}[h]
 \begin{center}
-\centering
-\includegraphics[width=0.85\textwidth]{1alsec.jpg} % Include the image placeholder.png
-\caption{1 pull ogni secondo}
+(\textit{f}\textsubscript{p}(\textit{t}), \textit{t}) \ding{226} \textit{lineare} poich\'e \textit{R\textsuperscript{2}}\(\approx\)0.9
+\end{center}
+\begin{center}
+\includegraphics[width=0.75\textwidth]{1alsec.jpg} % Include the image placeholder.png
 \label{fig:1 pull ogni secondo}
 \end{center}
+
+\begin{center}
+\includegraphics[width=0.75\textwidth]{5alsec.jpg} % Include the image placeholder.png
+\label{fig:1 pull ogni 5 secondi}
+\end{center}
+
+\begin{center}
+\includegraphics[width=0.75\textwidth]{10alsec.jpg} % Include the image placeholder.png
+\label{fig:1 pull ogni 10 secondi}
+\end{center}
+
+\begin{center}
+\includegraphics[width=0.75\textwidth]{20alsec.jpg} % Include the image placeholder.png
+\label{fig:1 pull ogni 20 secondi}
+\end{center}
+
+%\begin{figure}[h!]
+%\begin{center}
+%\centering
+%\includegraphics[width=0.85\textwidth]{20alsec.jpg} % Include the image placeholder.png
+%\caption{1 pull ogni 20 secondi}
+%\label{fig:1 pull ogni 20 secondi}
+%\end{center}
+%\end{figure}
+
+\begin{figure}[h]
+\begin{subfigure}{0.5\textwidth}
+\includegraphics[width=0.9\linewidth,height=4cm]{1alsec.jpg} % Include the image placeholder.png
+%\label{fig:1 pull ogni secondo}
+\caption{1 pull ogni secondo}
+\end{subfigure}
+\begin{subfigure}{0.5\textwidth}
+\includegraphics[width=0.9\linewidth,height=4cm]{5alsec.jpg} % Include the image placeholder.png
+\caption{1 pull ogni 5 secondi}
+\end{subfigure}
+\begin{subfigure}{0.5\textwidth}
+\includegraphics[width=0.9\linewidth,height=4cm]{10alsec.jpg} % Include the image placeholder.png
+\caption{1 pull ogni 10 secondi}
+\end{subfigure}
+\begin{subfigure}{0.5\textwidth}
+\includegraphics[width=0.9\linewidth,height=4cm]{20alsec.jpg} % Include the image placeholder.png
+\caption{1 pull ogni 20 secondi}
+\end{subfigure}
 \end{figure}
 
 \subsubsection{Fase 2 - \textit{Velocit\'a media di scarica} fissata la \textit{frequenza di pull}}
 
 \subsubsection{Fase 3 - Relazione funzionale tra la \textit{velocit\'a media di scarica} e \textit{frequenza di pull}}
+
+\begin{center}
+\includegraphics[width=0.75\textwidth]{veloc.jpg} % Include the image placeholder.png
+\label{fig:Relazione funzionale}
+\end{center}
 
 \begin{itemize}
 \item{(\textit{f}\textsubscript{p}(\textit{t}), \textit{t}) \ding{226} \textit{lineare} poich\'e \textit{R\textsuperscript{2}}\(\approx\)0.9}
